# agora

./: DEVELOPMENT_SETUP.md  Upcoming events (empty state).md
.github/workflows/: backend.yml  contracts.yml  frontend.yml
apps/web/: README.md  package.json  playwright.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/create-event/: page.tsx
apps/web/app/home/: page.tsx
apps/web/app/profile/: page.tsx
apps/web/components/events/: create-event-form.tsx  event-card.tsx  mockups.ts  popular-events-section.tsx
apps/web/components/landing/: faq-section.tsx  hero-section.tsx  info-section.tsx  pricing-section.tsx
apps/web/components/layout/: footer.tsx  navbar.tsx
apps/web/components/layout/navbar/: guest-nav.tsx  user-nav.tsx
apps/web/components/ui/: button.tsx
apps/web/tests/: profile-states.spec.ts
contract/contracts/event_registry/src/: error.rs  events.rs  lib.rs  storage.rs  test.rs  test_e2e.rs  test_free_ticket.rs  test_proposal_cancellation.rs  types.rs
contract/contracts/event_registry/test_snapshots/test/: test_blacklist_organizer.1.json  test_cancel_event_success.1.json  (+35 more)
contract/contracts/ticket_payment/src/: contract.rs  error.rs  events.rs  lib.rs  storage.rs  test.rs  test_e2e.rs  types.rs
design/: chat-filled-state.md
docs/: DATABASE_SCHEMA.md
server/: .dockerignore  Cargo.toml  docker-compose.yml
server/src/: main.rs
server/src/handlers/: health.rs
server/src/models/: event.rs  mod.rs  organizer.rs  ticket.rs  transaction.rs  user.rs
server/src/utils/: docker_compose_tests.rs  logging.rs  mod.rs
(+35 files in other folders)
